tests/snapshots/snapshots__tsx_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.tsx
     5→export interface ButtonProps …
    15→export function Button …
    29→export const Input …
