tests/snapshots/snapshots__tsx_sample_level2.snap
---
source: tests/snapshots.rs
expression: output
---
sample.tsx
     5→export interface ButtonProps {
    15→export function Button({ label, onClick, disabled }: ButtonProps) {
    19→export const IconButton = ({ icon, ...rest }: { icon: string } & ButtonProps) => {
    23→function useToggle(initial: boolean): [boolean, () => void] {
    29→export const Input = forwardRef<HTMLInputElement, React.InputHTMLAttributes<HTMLInputElement>>(
    35→export type Theme = "light" | "dark";
    37→export const MemoizedList = React.memo(function MemoizedList({ items }: { items: string[] }) {
    41→export default function App() {
