tests/snapshots/snapshots__tsx_sample_level3.snap
---
source: tests/snapshots.rs
expression: output
---
sample.tsx
     4→/** Props for the Button component. */
     5→export interface ButtonProps {
    11→/**
    12→ * A clickable button component.
    13→ * @param props - The button props.
    14→ */
    15→export function Button({ label, onClick, disabled }: ButtonProps) {
    19→export const IconButton = ({ icon, ...rest }: { icon: string } & ButtonProps) => {
    23→function useToggle(initial: boolean): [boolean, () => void] {
    28→/** A forwarded-ref input component. */
    29→export const Input = forwardRef<HTMLInputElement, React.InputHTMLAttributes<HTMLInputElement>>(
    35→export type Theme = "light" | "dark";
    37→export const MemoizedList = React.memo(function MemoizedList({ items }: { items: string[] }) {
    41→export default function App() {
