tests/snapshots/snapshots__tsx_sample_snapshot.snap
---
source: tests/snapshots.rs
expression: output
---
sample.tsx
     5→export interface ButtonProps
    15→export function Button
    19→export const IconButton
    23→function useToggle
    29→export const Input
    35→export type Theme
    37→export const MemoizedList
    41→export default function App
