tests/snapshots/snapshots__typescript_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
sample.ts
     3→ * Process all items and return the count.
     5→export function processItems(items: string[]): number {
     6→    return items.length;
     7→}
     9→function helper(): void {}
    12→ * Fetch data from the given URL.
    13→ * @param url - The endpoint to fetch from.
    14→ * @returns The fetch response.
    16→export async function fetchData(url: string): Promise<Response> {
    17→    return fetch(url);
    18→}
    20→export class TokenParser …
    23→    constructor(input: string) {
    24→        this.tokens = [];
    25→    }
    27→    public parse(): Token[] {
    28→        return this.tokens;
    29→    }
    31→    private advance(): void {}
    34→export interface Visitor …
    35→    visitToken(token: Token): void;
    36→    visitAll(tokens: Token[]): void;
    39→export enum TokenKind …
    40→    Ident = "ident",
    41→    Number = "number",
    42→    Symbol = "symbol",
    43→}
    45→export type Span = [number, number];
    47→export const MAX_TOKENS = 1024;
    49→export default class DefaultExport …
    54→    export function format(s: string): string {
    55→        return s;
    56→    }
