tests/snapshots/snapshots__typescript_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
sample.ts
    34→export interface Visitor …
