tests/snapshots/snapshots__typescript_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.ts
     5→export function processItems(items: string[]): number {
     9→function helper(): void {}
    16→export async function fetchData(url: string): Promise<Response> {
    20→export class TokenParser …
    23→    constructor(input: string) {
    27→    public parse(): Token[] {
    31→    private advance(): void {}
    34→export interface Visitor …
    35→    visitToken(token: Token): void;
    36→    visitAll(tokens: Token[]): void;
    39→export enum TokenKind …
    45→export type Span …
    47→export const MAX_TOKENS …
    49→export default class DefaultExport …
    54→    export function format(s: string): string {
