tests/snapshots/snapshots__typescript_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.ts
     5→export function processItems(items: string[]): number {
    16→export async function fetchData(url: string): Promise<Response> {
    34→export interface Visitor …
