tests/snapshots/snapshots__typescript_sample_level1.snap
---
source: tests/snapshots.rs
expression: output
---
sample.ts
     5→export function processItems
    16→export async function fetchData
    20→export class TokenParser
    23→    constructor
    27→    public parse
    34→export interface Visitor
    35→    visitToken
    36→    visitAll
    39→export enum TokenKind
    45→export type Span
    47→export const MAX_TOKENS
    49→export default class DefaultExport
    53→export namespace Utils
    54→    export function format
